# dhis2-era5land-simple

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TUTORIAL.md  UPGRADE.md  compose.ghcr.yml  compose.yml  main.py  main_v2.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: import-era5-daily.ipynb
scripts/: run_notebook.py  scheduler.sh
